* Removes the bundled version of Action Scheduler
* Removes checkout opt-in if customers already subscribed
* Fixes cli sync issue where historical Orders Not Syncing Correctly
* Fixes Account Connection Issue Related to Object Caching
* Fixes HTTP worker warning
* Change to replace option, transient functions with direct DB queries
= 4.2.1 =
* Bug fix for product variations
* Front end optimizations
= 4.2 =
* Remote diagnostics setting maintenance 
* Adds support for syncing Wordpress user/customer account language to Mailchimp contact 
* Fix for WooCommerce coupons date_expires not syncing to Mailchimp 
* Design update for disconnect modal 
* Fix for issue with setting logging preference to none
* Enhances syncing orders by starting from newest to oldest 
* Adds WooCommerce plugin dependency feature 
* Bump braces from 3.0.2 to 3.0.3 in /blocks
= 4.1 =
* Introduced a new filter for coupons (details available in the Wiki).
* Restored the "Resync Now" button.
* Reinstated the Mailchimp icon in the WordPress admin sidebar.
* Updated the design of the Mailchimp account creation user experience.
* Fix for duplicated parent products when variation's info is edited. 
* Tested up to Woocommerce v9.0
* Support for customization of the cookie options being set
= 4.0.2 =
* Adds the Changelog back to the UI
* Tested up to Woocommerce v8.9
* Fixed connection issue when disconnecting and reconnecting
= 4.0.1 =
* Log changes
* Add audience name to overview
= 4.0 =
* Allow orders to be sent to Mailchimp even if a Wordpress user role isn't set
* Support for custom order IDs
* Updated dependabot issues related to block-based checkouts
* Refreshed plugin interface 
= 3.7 =
* Allow orders to be sent to Mailchimp even if a Wordpress user role isn't set
* Support for custom order IDs
* Updated dependabot issues related to block-based checkouts
= 3.6 =
* Add support for product image size changes
* Add sync filter for order post types